[package]
name = "luxite-mint"
version = "0.1.0"
description = "LUXITE Mint"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "luxite_mint"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
luxite-mint-api = { path = "../api" }
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
mpl-token-metadata = "5.0.0-beta.1"
solana-security-txt = "1.1.2"
